fixes scroll stickiness on mobile

--- a/app/styles/legacy/_screen.scss
+++ b/app/styles/legacy/_screen.scss
@@ -4663,6 +4663,7 @@ ul.schedule-table {
       width: 100%;
       margin: 0;
       padding: 0 10px;
+      float: none;
     }
 
     .gsc-thumbnail {
